force-app/main/default/objects/Discount__c/fields/Account_Funding__c.field-meta.xml
<CustomField>
    <fullName>Account_Funding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account_Funding</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Discounts</relationshipLabel>
    <relationshipName>Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>