force-app/main/default/objects/Discount__c/fields/CMS_Request_By__c.field-meta.xml
<CustomField>
    <fullName>CMS_Request_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMS Request By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>