force-app/main/default/objects/Discount__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>(MVP 1.0) - FIN 2.0 Discount Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>