force-app/main/default/objects/Discount__c/fields/GST_Code__c.field-meta.xml
<CustomField>
    <fullName>GST_Code__c</fullName>
    <label>GST Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GST_Code</valueSetName>
    </valueSet>
</CustomField>