force-app/main/default/objects/Discount__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Percentage</label>
    <type>Checkbox</type>
</CustomField>