force-app/main/default/objects/Discount__c/fields/Published_Amount__c.field-meta.xml
<CustomField>
    <fullName>Published_Amount__c</fullName>
    <label>Published Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>