force-app/main/default/objects/Discount__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <label>Published By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>