force-app/main/default/objects/Discount__c/fields/Published_Name__c.field-meta.xml
<CustomField>
    <fullName>Published_Name__c</fullName>
    <label>Published Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>