force-app/main/default/objects/Discount__c/fields/Published_No_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>Published_No_Of_Days__c</fullName>
    <label>Published No Of Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>