force-app/main/default/objects/Discount__c/fields/Published_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Published_Terms_Conditions__c</fullName>
    <label>Published Terms &amp; Conditions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>