force-app/main/default/objects/Discount__c/fields/Published_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Published_Valid_From__c</fullName>
    <label>Published Valid From</label>
    <type>Date</type>
</CustomField>