force-app/main/default/objects/Discount__c/fields/Published_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Published_Valid_To__c</fullName>
    <label>Published Valid To</label>
    <type>Date</type>
</CustomField>