force-app/main/default/objects/Discount__c/recordTypes/Early_Bird.recordType-meta.xml
<RecordType>
    <fullName>Early_Bird</fullName>
    <active>true</active>
    <label>Early Bird</label>
</RecordType>