force-app/main/default/objects/Discount__c/recordTypes/Promotion.recordType-meta.xml
<RecordType>
    <fullName>Promotion</fullName>
    <active>true</active>
    <label>Promotion</label>
</RecordType>