force-app/main/default/objects/Discount__c/validationRules/Amount_has_to_be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_has_to_be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Amount__c &lt; 0 ||  GST_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Amount has to be positive</errorMessage>
</ValidationRule>