force-app/main/default/objects/Discount__c/validationRules/Lock_Course_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Course_Discount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Submitted for Creation Review&quot;),
ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Pending Creation Review&quot;),
ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Submitted for Update Review&quot;),
ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Pending Update Review&quot;),
ISPICKVAL(PRIORVALUE(Publish_Status__c), &quot;Submitted for Unpublish Review&quot;)), $Profile.Name &lt;&gt; &quot;System Administrator&quot;, $Profile.Name &lt;&gt; &quot;Integration Profile&quot;)</errorConditionFormula>
    <errorMessage>Record is locked and you are not allowed to change this record.</errorMessage>
</ValidationRule>