force-app/main/default/objects/Discount__c/validationRules/Percentage_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Percentage_Discount</fullName>
    <active>true</active>
    <description>For Percentage based discounts, the maximum amount is 100</description>
    <errorConditionFormula>IF( Percentage__c, Amount__c&gt;100 || GST_Amount__c &gt; 100,FALSE)</errorConditionFormula>
    <errorMessage>For Percentage based discounts, the maximum amount is 100</errorMessage>
</ValidationRule>