force-app/main/default/objects/Discount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Amount__c</columns>
    <columns>GST_Amount__c</columns>
    <columns>GST_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>No_of_Days__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Publish_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>